--- a/maven-base/src/main/resources/application.yml
+++ b/maven-base/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+---
 spring:
   application:
     name: maven-base
@@ -5,16 +6,12 @@ spring:
     encoding: UTF-8
   jackson:
     time-zone: "Asia/Tokyo"
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: dbc:h2:mem:;
-    username: sa
-    password: 
-  h2:
-    console:
-      enabled: true  
     
 logging:
   level:
     web: debug    
     
+---
+spring:
+  profiles:
+    active: local
