--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.gradle.example'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '11'
 
 configurations {
@@ -19,16 +19,48 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.h2database:h2'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // springs
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-batch:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.4'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor:2.5.4'
+
+    // MyBatis JPA,JDBC使用時などは消してください
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+    implementation 'org.mybatis.scripting:mybatis-thymeleaf:1.0.1'
+
+    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'commons-io:commons-io:2.8.0'
+
+    // devtools
+    runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.5.4'
+
+    // DB Drivers MySQLを使用しない場合は差し替えてください
+    runtimeOnly 'mysql:mysql-connector-java:8.0.23'
+    runtimeOnly 'com.h2database:h2:1.4.200'
+
+    // tests
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
+    testImplementation 'org.springframework.batch:spring-batch-test:4.3.3'
+    testImplementation 'io.projectreactor:reactor-test:3.4.9'
+
+    // MyBatis for Test
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.3'
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:3.4.3'
+    testImplementation 'org.mockito:mockito-inline:3.4.0'
+
+    // Spock
+    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+    testImplementation 'org.spockframework:spock-spring:2.0-groovy-3.0'
 }
 
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(AbstractCompile)*.options*.encoding = tasks.withType(GroovyCompile)*.groovyOptions*.encoding = 'UTF-8'
