--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
     implementation 'org.mybatis.scripting:mybatis-thymeleaf:1.0.1'
 
-    implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'commons-io:commons-io:2.8.0'
@@ -41,6 +40,11 @@ dependencies {
     // DB Drivers MySQLを使用しない場合は差し替えてください
     runtimeOnly 'mysql:mysql-connector-java:8.0.23'
     runtimeOnly 'com.h2database:h2:1.4.200'
+
+    // lombok
+    implementation 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     // tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
@@ -57,6 +61,7 @@ dependencies {
     // Spock
     testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
     testImplementation 'org.spockframework:spock-spring:2.0-groovy-3.0'
+
 }
 
 test {
