maven側ベースで pom.xml以外の部分を先に修正

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 ---
 spring:
   application:
-    name: gradle-base
+    name: spring-gradle-template
   messages:
     encoding: UTF-8
   jackson:
@@ -12,6 +12,7 @@ logging:
     web: debug
 
 ---
+# -Dspring.profiles.activeを指定しなかった場合に実行される application.ymlの指定
 spring:
   profiles:
     default: local
