--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 //file:noinspection GroovyAssignabilityCheck
 plugins {
-    id 'org.springframework.boot' version '2.5.4'
+    id 'org.springframework.boot' version '2.5.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'groovy'
@@ -22,49 +22,60 @@ repositories {
 }
 
 dependencies {
-    // springs
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux:2.5.4'
-    implementation 'org.springframework.boot:spring-boot-starter-batch:2.5.4'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.4'
-    implementation 'org.springframework.boot:spring-boot-configuration-processor:2.5.4'
-
-    // MyBatis JPA,JDBC使用時などは消してください
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
-    implementation 'org.mybatis.scripting:mybatis-thymeleaf:1.0.1'
-
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation 'commons-io:commons-io:2.8.0'
+    // Springs
+    // Spring Boot
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // devtools
     runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.5.4'
 
-    // DB Drivers MySQLを使用しない場合は差し替えてください
-    runtimeOnly 'mysql:mysql-connector-java:8.0.23'
-    runtimeOnly 'com.h2database:h2:1.4.200'
+    // Spring Framework
+    // spring retry
+    implementation 'org.springframework.retry:spring-retry'
 
+    // libraries
     // lombok
     implementation 'org.projectlombok:lombok:1.18.20'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
+    // commons
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'commons-io:commons-io:2.11.0'
+
+    // Data sources
+    // postgreSQL
+    runtimeOnly 'org.postgresql:postgresql'
+    // h2
+    runtimeOnly 'com.h2database:h2:1.4.200'
+
+    // MyBatis JPA,JDBC使用時などは削除
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+    implementation 'org.mybatis.scripting:mybatis-thymeleaf:1.0.2'
+
     // tests
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
-    testImplementation 'org.springframework.batch:spring-batch-test:4.3.3'
-    testImplementation 'io.projectreactor:reactor-test:3.4.9'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.batch:spring-batch-test'
+    testImplementation 'io.projectreactor:reactor-test'
 
     // MyBatis for Test
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.3'
 
     // Mockito
-    testImplementation 'org.mockito:mockito-core:3.4.3'
-    testImplementation 'org.mockito:mockito-inline:3.4.0'
+    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.mockito:mockito-inline'
 
     // Spock
     testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
     testImplementation 'org.spockframework:spock-spring:2.0-groovy-3.0'
-
+    implementation 'org.codehaus.groovy:groovy-all:3.0.8'
 }
 
 test {
