--- a/build.gradle
+++ b/build.gradle
@@ -24,24 +24,23 @@ repositories {
 dependencies {
     // Springs
     // Spring Boot
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.boot:spring-boot-starter-batch'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-configuration-processor'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:2.5.5'
+    implementation 'org.springframework.boot:spring-boot-starter-batch:2.5.5'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.5'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor:2.5.5'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.5'
 
     // devtools
-    runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.5.4'
+    runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.5.5'
 
     // Spring Framework
     // spring retry
-    implementation 'org.springframework.retry:spring-retry'
+    implementation 'org.springframework.retry:spring-retry:1.3.1'
 
     // libraries
     // lombok
-    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
@@ -61,21 +60,21 @@ dependencies {
     implementation 'org.mybatis.scripting:mybatis-thymeleaf:1.0.2'
 
     // tests
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.batch:spring-batch-test'
-    testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
+    testImplementation 'org.springframework.batch:spring-batch-test:4.3.3'
+    testImplementation 'io.projectreactor:reactor-test:3.4.10'
 
     // MyBatis for Test
-    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.3'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.0'
 
     // Mockito
-    testImplementation 'org.mockito:mockito-core'
-    testImplementation 'org.mockito:mockito-inline'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.mockito:mockito-inline:4.0.0'
 
     // Spock
     testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
     testImplementation 'org.spockframework:spock-spring:2.0-groovy-3.0'
-    implementation 'org.codehaus.groovy:groovy-all:3.0.8'
+    testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'
 }
 
 test {
